# tauvy

./: Cargo.toml
editor/: Cargo.toml  tauri.conf.json
editor/src/: main.rs
editor/ui/: index.html
engine/: Cargo.toml
engine/src/: main.rs
events/: Cargo.toml
events/src/: lib.rs
