[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# List local dependencies first
[dependencies]
events = { path = "../events" }
# External dependencies
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.9"
bincode = "1.3.3"
tungstenite = "0.18"
bevy = "0.10.1"
